accept local filenames for plugin url
git-svn-id: file:///home/toad/git-migration/temprepository/trunk/freenet@15734 67a373e5-eb02-0410-a15c-ee090a768436